--- a/pom.xml
+++ b/pom.xml
@@ -27,8 +27,8 @@
     </developers>
 
     <properties>
-        <maven.compiler.target>1.8</maven.compiler.target>
-        <maven.compiler.source>1.8</maven.compiler.source>
+        <maven.compiler.target>17</maven.compiler.target>
+        <maven.compiler.source>17</maven.compiler.source>
         <kotlin.version>1.3.50</kotlin.version>
         <junit.version>5.5.2</junit.version>
 
@@ -78,7 +78,8 @@
         <dependency>
             <groupId>br.ufsc.bridge</groupId>
             <artifactId>metafy</artifactId>
-            <version>0.1.2</version>
+<!--            TODO: gerar release metafy e colocar aqui (versão atual é local para teste local) -->
+            <version>1.0.1</version>
         </dependency>
         <dependency>
             <groupId>org.apache.commons</groupId>
@@ -154,7 +155,7 @@
             <plugin>
                 <groupId>org.jacoco</groupId>
                 <artifactId>jacoco-maven-plugin</artifactId>
-                <version>0.8.5</version>
+                <version>0.8.11</version>
                 <configuration>
                     <destFile>${sonar.jacoco.itReportPath}</destFile>
                     <dataFile>${sonar.jacoco.itReportPath}</dataFile>
