--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -1,33 +1,32 @@
 name: Java CI with Maven
 
 on:
-  push:
-    branches: master
   pull_request:
-    branches: '*'
+    branches:
+      - '*'
 
 jobs:
   build:
-
+    
     runs-on: ubuntu-latest
-
+    
     steps:
-    - uses: actions/checkout@v2  
-    
-    - name: Set up JDK 8
-      uses: actions/setup-java@v2
-      with:
-        java-version: '8'
-        distribution: 'zulu'
-            
-    - name: Cache local Maven repository
-      uses: actions/cache@v2.1.6
-      with:
-        path: ~/.m2/
-        key: ${{ runner.os }}-maven-${{ hashFiles('pom.xml') }} 
-    
-    - name: Build with Maven
-      run: mvn clean verify
-
-    - name: Upload codecov report
-      uses: codecov/codecov-action@v1.5.2
+      - uses: actions/checkout@v4
+      
+      - name: Set up JDK 17
+        uses: actions/setup-java@v3
+        with:
+          java-version: 17
+          distribution: 'zulu'
+      
+      - name: Cache local Maven repository
+        uses: actions/cache@v3
+        with:
+          path: ~/.m2/
+          key: ${{ runner.os }}-maven-${{ hashFiles('pom.xml') }}
+      
+      - name: Build with Maven
+        run: mvn clean verify
+      
+      - name: Upload codecov report
+        uses: codecov/codecov-action@v3
