--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -9,16 +9,16 @@ jobs:
     
     steps:
       - name: Checkout repo
-        uses: actions/checkout@v2
+        uses: actions/checkout@v4
         with:
-            token: ${{ secrets.RELEASE_TOKEN }}
-
-        
+          token: ${{ secrets.RELEASE_TOKEN }}
+      
+      
       
       - name: Set up JDK, Maven Central credentials and GPG key
-        uses: actions/setup-java@v2
+        uses: actions/setup-java@v3
         with: # Create the settings.xml with Maven Central credentials and GPG private key
-          java-version: '8'
+          java-version: 17
           distribution: 'zulu'
           server-id: ossrh
           server-username: MAVEN_USERNAME
@@ -29,30 +29,30 @@ jobs:
       
       - name: Configure Git User
         run: |
-            git config user.email "actions@github.com"
-            git config user.name "GitHub Actions"
+          git config user.email "actions@github.com"
+          git config user.name "GitHub Actions"
       
       - name: Prepare the release
         env:
           MVN_RELEASE_GPG_PASSPHRASE: ${{ secrets.MVN_RELEASE_GPG_PASSPHRASE }}
         run: mvn -B release:prepare -Possrh
-  
+      
       - name: Push the release to Maven Central
         env:
           MAVEN_USERNAME: ${{ secrets.MAVEN_USERNAME }}
           MAVEN_PASSWORD: ${{ secrets.MAVEN_PASSWORD }}
           MVN_RELEASE_GPG_PASSPHRASE: ${{ secrets.MVN_RELEASE_GPG_PASSPHRASE }}
         run: mvn release:perform -Possrh
-        
+      
       - name: Set up JDK and Nexus credentials
-        uses: actions/setup-java@v2
+        uses: actions/setup-java@v3
         with: # Will overwrite the settings.xml created for Maven Central
-          java-version: '8'
+          java-version: 17
           distribution: 'zulu'
           server-id: repo-bridge
           server-username: NEXUS_USERNAME
           server-password: NEXUS_PASSWORD
-        
+      
       - name: Push the release to Nexus
         env:
           NEXUS_USERNAME: ${{ secrets.NEXUS_USERNAME }}
