--- a/pom.xml
+++ b/pom.xml
@@ -4,7 +4,7 @@
 
     <groupId>br.ufsc.bridge</groupId>
     <artifactId>validation</artifactId>
-    <version>1.4.11-SNAPSHOT</version>
+    <version>2.0.0-SNAPSHOT</version>
     <packaging>jar</packaging>
 
     <name>Bridge Platform - Validation</name>
@@ -79,8 +79,7 @@
         <dependency>
             <groupId>br.ufsc.bridge</groupId>
             <artifactId>metafy</artifactId>
-            <!--            TODO: gerar release metafy e colocar aqui (versão atual é local para teste local) -->
-            <version>1.0.1</version>
+            <version>1.0.0</version>
         </dependency>
         <dependency>
             <groupId>org.apache.commons</groupId>
@@ -88,6 +87,17 @@
             <version>1.11.0</version>
         </dependency>
     </dependencies>
+
+    <distributionManagement>
+        <snapshotRepository>
+            <id>repo-bridge</id>
+            <url>https://repositorio.bridge.ufsc.br/repository/snapshots/</url>
+        </snapshotRepository>
+        <repository>
+            <id>ossrh</id>
+            <url>https://oss.sonatype.org/service/local/staging/deploy/maven2/</url>
+        </repository>
+    </distributionManagement>
 
     <build>
         <plugins>
@@ -224,9 +234,6 @@
                 <version>3.0.1</version>
                 <configuration>
                     <autoVersionSubmodules>true</autoVersionSubmodules>
-                    <useReleaseProfile>false</useReleaseProfile>
-                    <releaseProfiles>ossrh</releaseProfiles>
-                    <goals>deploy</goals>
                     <tagNameFormat>@{project.version}</tagNameFormat>
                 </configuration>
             </plugin>
@@ -235,15 +242,8 @@
     </build>
 
     <profiles>
-        <!-- MAVEN CENTRAL -->
         <profile>
-            <id>ossrh</id>
-            <distributionManagement>
-                <repository>
-                    <id>ossrh</id>
-                    <url>https://oss.sonatype.org/service/local/staging/deploy/maven2/</url>
-                </repository>
-            </distributionManagement>
+            <id>release</id>
             <build>
                 <plugins>
                     <plugin>
@@ -262,21 +262,6 @@
                     </plugin>
                 </plugins>
             </build>
-        </profile>
-
-        <!-- NEXUS -->
-        <profile>
-            <id>repo-bridge</id>
-            <distributionManagement>
-                <repository>
-                    <id>repo-bridge</id>
-                    <url>${env.NEXUS_PUBLIC_URL}</url>
-                </repository>
-                <snapshotRepository>
-                    <id>repo-bridge</id>
-                    <url>${env.NEXUS_SNAPSHOT_URL}</url>
-                </snapshotRepository>
-            </distributionManagement>
         </profile>
     </profiles>
 
