--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -29,5 +29,8 @@ jobs:
     - name: Build with Maven
       run: mvn clean verify
 
-    - name: Upload codecov report
-      uses: codecov/codecov-action@v1.5.2
+    - name: Upload test results to Codecov
+      if: ${{ !cancelled() }}
+      uses: codecov/test-results-action@v1
+      with:
+        token: ${{ secrets.CODECOV_TOKEN }}
